--- a/stylesheets.css
+++ b/stylesheets.css
@@ -6,9 +6,7 @@
 
 body {
     background-color: #1d1d1d;
-    background-image: url('./Resources/dottedPatternSVG.svg');
     color: var(--secondary);
-
 }
 
 img {
@@ -341,19 +339,16 @@ logo a h3{
     width: max-content;
     height: min-content;
 }
-.spanSkill{
+
+.spanGetInTouch{
     position: relative;
     overflow: hidden;
     width: max-content;
     height: min-content;
+    display: inline;
+    text-align: center;
 }
 
-.spanFooter{
-    position: relative;
-    overflow: hidden;
-    width: max-content;
-    height: min-content;
-}
 
 .headerStagger{
     position: relative;
@@ -368,7 +363,7 @@ logo a h3{
     font-family: 'Lora';
     font-weight: 300;
     font-size: 104px;
-    line-height: 127%;
+    line-height:128%;
 }
 
 .subTitleCover {
@@ -385,114 +380,51 @@ logo a h3{
 #missionSection {
     position: relative;
     width: 100%;
+    background-color: var(--primary);
 }
 
 .sectionTitle {
     display: grid;
-    margin-top: 200px;
+    margin: 96px 48px 48px 0;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
-    grid-gap: 24px;
+    grid-template-rows:auto;
     justify-items: center;
 }
 
 .sectionTitle h1 {
-    grid-column: 1/span 7;
-    text-align: center;
-    grid-row: 1;
+    grid-column: 1/span 3;
+    text-align: left;
+    grid-row: 1/span 6;
     padding-right: 128px;
     line-height: 80%;
+    font-size: 48px;
 
 }
 
 .sectionTitle h5{
-    grid-column: 7/span 5;
+    grid-column: 7/span 6;
     text-align: left;
-    grid-row: 1;
+    grid-row: 1/span 6;
     line-height: 175%;
 }
-
-.missionSectionAnimation {
-    text-align: center;
-    /* transform: scale(0.95); */
-    
-
-
-    /* transform: scale(20%); */
-
+.imageMe{
+    grid-column: 4/span 3;
+    grid-row:6/span 4;
+    width: 80%;
 }
 
-#halfDisk {
-    animation-name: pivot;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-    transform-origin: center bottom;
-    animation-timing-function: cubic-bezier(0.59, 0, 0.44, 0.99);
-    animation: moveIt 2.5s infinite;
+.plusSvg{
+    grid-column: 3/span 2;
+    grid-row:7/span 4;
+    transform: scale(80%);
 }
-
-@keyframes moveIt {
-
-    0%,
-    100% {
-        transform: rotate(-25deg);
-    }
-
-    50% {
-        transform: rotate(25deg);
-    }
+.circleSvg{
+    grid-column: 5/span 2;
+    grid-row:8/span 1;
 }
-
-#rightBall {
-    animation-name: updown;
-    transform: translate(30px, 50px);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation: updown 2.5s cubic-bezier(0.42, 0.08, 0.26, 1.04) infinite;
-}
-
-@keyframes updown {
-
-    0%,
-    100% {
-        transform: translate(-30px, -150px);
-    }
-
-    50% {
-        transform: translate(30px, 40px);
-    }
-
-    54% {
-        transform: translate(33px, 32px);
-    }
-
-}
-
-
-#leftBall {
-    animation-name: downUp;
-    transform: translate(-30px, 34px);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation: downUp 2.5s cubic-bezier(0.42, 0.08, 0.26, 1.04) infinite;
-}
-
-@keyframes downUp {
-
-    0%,
-    100% {
-        transform: translate(-30px, 34px);
-    }
-
-    50% {
-        transform: translate(30px, -150px);
-    }
-
-    4% {
-        transform: translate(-35px, 30px);
-    }
-
+.coneSvg{
+    grid-column: 11/span 2;
+    grid-row:10/span 2;
 }
 
 
@@ -501,53 +433,90 @@ logo a h3{
 #workSection {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    margin:242px 48px 0 48px;
+    background-color: var(--primary);
+}
+main{
+    background-color: var(--primary);
 }
 
-.workSectionTitle {
+.divider{
+    width: 100%;
+    border-bottom: 1px solid var(--border);
+}
+.workGrid{
+    display: grid;
+    position: relative;
+    margin-top:42px;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    justify-items: center;
+    column-gap: 24px;
+    width: 100%;
+}
+.workSectionTitle{
+    grid-column:1/span 3;
+    display: grid;
+    grid-template-rows: repeat(4/1fr);
+}
+.circleWorkSvg{
+    grid-row: 2/auto;
+    grid-column: 2/auto;
+}
+.rotateSvg{
+    grid-row: 3/ auto ; 
+}
+.workSectionTitleSticky{
+    position:sticky;
+    top:32px;
+    padding-bottom:32px;
+    text-align: left;
+    background-color: #1d1d1d;
+    height: fit-content;
+}
+.tilesSectionWrapper{
+    grid-column:5/span 13;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 48px 96px 32px 96px;
+    flex-direction: column;
+    row-gap: 24px;
+    width: 100%;
 }
 
 .workSectionTitle h1 {
     text-align: left;
 }
-
-
-.tilesSectionWrapper {
-    display: block;
-    margin: 0 96px 0 96px;
-}
-
-
-
-.tilesSection {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 24px;
-    row-gap: 24px;
-}
-
-
+ 
 .workTiles {
     border: 1px solid var(--border);
     border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    padding: 16px;
-    background-color: var(--primary);
+    background-color: #333333;
 }
 
 .workTitleImage {
-    width: 100%;
+    width: 40%;
     display: block;
-    max-height: 400px;
+    max-height: 450px;
     border-radius: 0px;
 }
+.workTileflex{
+    display: flex;
+    flex-direction: row;
 
+}
+.workTilesFlexInfo{
+   margin:32px 24px 24px 24px; 
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   width: 60%;
+}
+
+.workTilesBottomWrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+   }
+   
 
 .workTiles a {
     text-decoration: none;
@@ -556,7 +525,7 @@ logo a h3{
 
 .workTiles:hover {
     border: 1px solid var(--secondary);
-    border-style: groove;
+    border-style:groove;
     overflow: hidden;
 }
 
@@ -565,14 +534,23 @@ logo a h3{
     font-weight: 300;
     padding-top: 32px;
 }
+.workTiles h6{
+    padding-top:24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+}
+
 
 .tags {
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 16px auto 8px auto;
-
+    margin: 16px 0 0 0;
+   
 }
 
 .tag {
@@ -582,40 +560,50 @@ logo a h3{
     font-weight: 300;
     border: 1px solid var(--border);
     padding: 8px 16px;
-    border-radius: 24px;
+    border-radius: 24px;   
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Skills section */
 #skillSection {
     display: block;
     width: 100%;
+    margin-top:240px;
+    background-color: var(--primary);
 }
 
-.hireMeAnimation svg{
-    position:absolute;
-    display: block;
-    float: right;
-    right: 20px;
-    /* top:96px; */
-    z-index: -20;
-    width: 200px;
-    height: auto;
+.skillSectionWrap {
+    margin: 0 48px;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap:24px;
 }
-
-#spinner {
-    transform-origin: 50%;
-    animation: spin 12s linear infinite;
+.spanSkill{
+    position: relative;
+    margin-top:48px;
+    width: max-content;
+    height: min-content;
+    grid-column:2/span 3;
+    align-self: flex-end;
 }
-
-@keyframes spin {
-    0% {
-        transform: rotate(360deg);
-    }
-
-    100% {
-        transform: rotate(0deg);
-    }
+.dividerSkill{
+    width: 100%;
+    border-bottom: 1px solid var(--border);
+    grid-column: 1/span 12;
 }
 
 
@@ -628,31 +616,29 @@ logo a h3{
     padding-bottom: 12px;
 }
 
-.skillSectionWrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 224px 96px;
-}
-
 
 .skillWrap {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: left;
-    margin-top: 96px;
+    width: 100%;
+    grid-column: 3/ span 8;
+    margin-top:32px;
 }
 
-
-
+.coneSkillAnimation{
+    grid-row:4;
+    grid-column: 12;
+}
+.plusSkill{
+    grid-row:2/span 1;
+    grid-column: 10;
+    align-self: flex-end;
+}
 .skillColumn {
     padding: 48px 48px;
     background-color: var(--primary);
     border: 1px solid var(--border);
-    width: 320px;
+    width:100%;
 }
 
 
@@ -674,6 +660,7 @@ logo a h3{
     display: flex;
     flex-direction: column;
     width: 100%;
+    background-color: var(--primary);
 }
 
 .expTitle {
@@ -685,32 +672,28 @@ logo a h3{
 
 .expSectionTitle {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    margin: 128px 96px 32px 96px;
+    flex-direction:column;
+    align-items: flex-end;
+    margin: 192px 48px 0 48px;
 }
 
 .DividerExp {
     border-top: 1px solid var(--border);
     width: 100%;
-    margin-right: 16px;
 }
 
-.experienceMainContainer {
-    display: flex;
-    flex-direction: row;
-    margin: 48px 96px;
+
+
+.experienceMainContainer{
+display: grid;
+grid-template-columns: repeat(12, 1fr);
+margin: 48px 48px 0 48px;
 }
 
 .experienceContainerWrapper {
     display: flex;
     flex-direction: column;
-    max-width: 60%;
-}
-
-.experienceAnimation {
-    width: 40%;
+    grid-column: 6/span 12;
 }
 
 .experienceContainer {
@@ -719,7 +702,15 @@ logo a h3{
     row-gap: 20px;
     border: 1px solid var(--border);
     background-color: var(--primary);
-    padding: 48px 48px 48px 48px;
+    padding: 48px 24px 48px 24px;
+}
+.arrowShadow{
+    grid-row: 1;
+    grid-column: 2/span 3;
+}
+.circleExp{
+    grid-row:2;
+    grid-column: 3;
 }
 
 .experienceContainer h6 {
@@ -738,59 +729,47 @@ logo a h3{
     font-weight: 300;
 }
 
-#toggle {
-    animation-name: toggle;
-    animation-duration: 2.2s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-}
-
-@keyframes toggle {
-
-    0%,
-    100% {
-        transform: translateY(-220px);
-    }
-
-    50% {
-        transform: translateY(0);
-    }
-}
 
 #GetInTouchSection {
     display: block;
     position: relative;
-    width: 100%;
-    margin-top: 96px;
-
+    margin: 240px 48px 96px 48px;
+    background-color: var(--primary);
 }
 
 #GetInTouchSectionWrap {
     display: flex;
     width: 100%;
+   align-items: center;
+}
 
+.footerWrap{
+    bottom:0;
+    margin:0 48px 32px 48px;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .footerVideo {
+    bottom: 0;
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -10;
+    height: 300px;
+    object-fit:cover;
+    z-index: -100;
 }
 
-.sectionTitleContact {
-    display: block;
-    padding: 48px;
-}
 
 .contactContainer {
     display: flex;
+    text-align: center;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 24px;
+    font-size:32px;
 
 }
 
@@ -805,15 +784,14 @@ logo a h3{
     padding-top: 24px;
     
 }
+.contactPlus{
+    transform: rotate(30deg);
+    position: absolute;
+}
 
 
 .contactMainContainer {
-    display: flex;
-    flex-direction: row;
-    margin-top: 100px;
-    align-items: center;
-    justify-content: space-between;
-    padding: 48px;
+   margin-top: 120px;
 }
 
 .goToTopContainer {
@@ -891,6 +869,27 @@ logo a h3{
     flex-direction: row;
 }
 
+.hireMeAnimation svg{
+    display: block;
+    z-index: -20;
+    width: 150px;
+    height: auto;
+}
+
+#spinner {
+    transform-origin: 50%;
+    animation: spin 12s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
 /*  inner page media queries */
 
 
