animations done 19July

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -9,9 +10,6 @@ body {
     color: var(--secondary);
 }
 
-img {
-    border-radius: 8px;
-}
 
 :root {
     --primary: #1d1d1d;
@@ -213,7 +211,9 @@ logo a h3{
 .hamburgerMenu:hover {
     border-bottom: var(--secondary) solid 5px;
 }
-
+.sample{
+    position: relative;
+}
 
 .hero{
     position: sticky;
@@ -227,8 +227,8 @@ logo a h3{
     justify-content: space-between;
     align-items: flex-start;
     color: white;
-    z-index: 0;
     align-items: flex-end;
+    
     /* border: 1px solid black; */
 }
 
@@ -274,7 +274,7 @@ logo a h3{
     padding: 12px 96px;
     float: left;
     transition: top .5s ease-in-out;
-    /* border: 1px solid white;  */
+    /* border-bottom: 1px solid var(--border);  */
 }
 .mainTitleanimationDiv{
     display: inline-block;
@@ -290,10 +290,12 @@ logo a h3{
 .mainNavSection {
     list-style: none;
     text-align: right;
+    
 }
 
 .mainNavSection li {
     padding-top: 16px;
+       
 }
 
 
@@ -304,11 +306,12 @@ logo a h3{
     font-style: normal;
     font-weight: 300;
     font-size: 32px;
+
     transition: 0.15s ease-in-out;
 }
 
 .mainNavSection a:hover {
-    border-bottom: var(--secondary) solid 5px;
+    border-bottom: var(--secondary) solid 5px; 
 }
 
 .navFlex {
@@ -379,6 +382,7 @@ logo a h3{
 
 #missionSection {
     position: relative;
+    padding-top:64px;
     width: 100%;
     background-color: var(--primary);
 }
@@ -465,10 +469,13 @@ main{
 }
 .rotateSvg{
     grid-row: 3/ auto ; 
+    z-index: -1;
+    width: 250px;
+
 }
 .workSectionTitleSticky{
     position:sticky;
-    top:32px;
+    top:64px;
     padding-bottom:32px;
     text-align: left;
     background-color: #1d1d1d;
@@ -492,12 +499,28 @@ main{
     background-color: #333333;
 }
 
-.workTitleImage {
+.frame{
     width: 40%;
-    display: block;
-    max-height: 450px;
-    border-radius: 0px;
+    min-height: 450px;
+    overflow: hidden;
 }
+.frame .workTitleImage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px 0 0 4px;
+    transition: 0.5s ease-in-out all;
+}
+
+.workTiles:hover {
+    border: 1px solid var(--secondary);
+    border-style:groove;
+}
+.workTitleImage:hover{
+    transform: scale(1.08);
+    transition: 0.5s ease-in-out all;
+}
+
 .workTileflex{
     display: flex;
     flex-direction: row;
@@ -523,16 +546,10 @@ main{
     color: white
 }
 
-.workTiles:hover {
-    border: 1px solid var(--secondary);
-    border-style:groove;
-    overflow: hidden;
-}
-
 .workTiles h4 {
     font-family: 'lora';
     font-weight: 300;
-    padding-top: 32px;
+    
 }
 .workTiles h6{
     padding-top:24px;
