--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1009,16 +1009,22 @@ aside{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100vh;
+        /* height: 100vh; */
         padding-bottom:32px;
+
+    }
+    .mainNavSection {
+    margin-top: 48px;
 
     }
 
     .mainNavSection li{
         text-align: left;
+       
     }
     .mainNavSection li a{
-        font-size: 24px; 
+        font-size: 32px; 
+        
     }
 
     .contactCover {
