--- a/stylesheets.css
+++ b/stylesheets.css
@@ -986,7 +986,6 @@ aside{
 
     .hero {
         padding: 0 24px;
-        height: 100vh;
     }
 
     .mainTitleCover h3 {
@@ -1010,14 +1009,13 @@ aside{
     .navFlex {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
+        justify-content: flex-start;
         padding-bottom:32px;
 
     }
     
     .mainNavSection {
-    margin-top: 48px;
+    margin-top: 96px;
 
     }
 
@@ -1287,15 +1285,13 @@ iframe{
 
     .hero {
         padding: 0 24px;
-        height: 100vh;
-    
     }
 
     .mainTitleCover h3 {
         font-family: 'Lora';
         font-style: normal;
         font-weight: 500;
-        font-size: 48px;
+        font-size: 64px;
         line-height: 127%;
     }
 
@@ -1312,16 +1308,18 @@ iframe{
     .navFlex {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        min-height: 100%;
+        justify-content: flex-start;
         padding-bottom:48px;
+    }
+    .mainNavSection{
+        margin-top: 96px;
     }
 
     .mainNavSection li{
         text-align: left;
     }
     .mainNavSection li a{
-        font-size: 32px; 
+        font-size: 48px; 
     }
 
     .sectionTitle{
