--- a/stylesheets.css
+++ b/stylesheets.css
@@ -565,7 +565,9 @@ main{
     max-height: 250px !important;
     object-fit: cover;
 }
-   
+.workTiles{
+    margin-top:8px;
+}
 
 .workTiles a {
     text-decoration: none;
@@ -775,6 +777,7 @@ margin: 48px 48px 0 48px;
 .jobTitle {
     font-family: 'lora';
     font-weight: 300;
+    line-height: 150%;
 }
 
 
@@ -1012,12 +1015,13 @@ aside{
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
-        padding-bottom:32px;
+        /* padding-bottom:32px; */
 
     }
     
     .mainNavSection {
-    margin-top: 48px;
+    /* margin-top: 48px; */
+    margin-bottom:96px;
 
     }
 
@@ -1169,9 +1173,16 @@ margin-top: 42px;
 .jobTitle{
     font-size:24px;
 }
+.companyDates{
+    padding-top:8px;
+}
+
 .companyAndDates, .companyName{
     font-size:16px;
+    flex-direction: column;
+
 }
+
 .experienceMainContainer h6{
     font-size: 16px;
 }
@@ -1287,10 +1298,11 @@ iframe{
 
     .hero {
         padding: 0 24px;
-        height: 100vh;
+        /* height: 100vh; */
     
     }
 
+    
     .mainTitleCover h3 {
         font-family: 'Lora';
         font-style: normal;
@@ -1313,8 +1325,11 @@ iframe{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-height: 100%;
-        padding-bottom:48px;
+        height: 100%; 
+    }
+
+    .mainNavSection{
+        margin-top: 96px;
     }
 
     .mainNavSection li{
@@ -1325,7 +1340,7 @@ iframe{
     }
 
     .sectionTitle{
-        margin: 96p 32px 0 32px;
+        margin: 96px 32px 0 32px;
     }
 
 .sectionTitle h5{
