article image and cover changes

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -699,8 +699,8 @@ main{
 .skillsSectionTitle {
     font-size: 32px;
     font-family: 'lora';
-
 }
+
 
 
 /* Experience section */
@@ -778,6 +778,9 @@ margin: 48px 48px 0 48px;
     font-family: 'lora';
     font-weight: 300;
     line-height: 150%;
+}
+.companyDates{
+    text-decoration: none;
 }
 
 
@@ -942,6 +945,10 @@ aside{
     margin-left: 64px;
     padding-left: 16px;
 }
+.articleContain img{
+   max-width: 1200px !important;
+   align-self: center;
+}
 
 .articleContain p,
 .articleContain h4,
@@ -1016,13 +1023,11 @@ aside{
         justify-content: space-between;
         height: 100%;
         /* padding-bottom:32px; */
-
     }
     
     .mainNavSection {
     /* margin-top: 48px; */
-    margin-bottom:96px;
-
+    margin-bottom:116px;
     }
 
     .mainNavSection li{
@@ -1031,7 +1036,6 @@ aside{
     }
     .mainNavSection li a{
         font-size: 32px; 
-        
     }
 
     .contactCover {
@@ -1256,6 +1260,7 @@ margin-top: 42px;
 .articleContain {
     padding:0 24px;
 }
+
 .articleContain h2{
     font-size: 32px;
 }
@@ -1298,8 +1303,8 @@ iframe{
 
     .hero {
         padding: 0 24px;
-        /* height: 100vh; */
-    
+        align-items: flex-start;
+        height: 60vh; 
     }
 
     
@@ -1307,13 +1312,13 @@ iframe{
         font-family: 'Lora';
         font-style: normal;
         font-weight: 500;
-        font-size: 48px;
+        font-size: 64px;
         line-height: 127%;
     }
 
     .subTitleCover {
         font-size: 18px;
-        max-width: 80%;
+        /* max-width: 60%; */
         padding-top: 16px;
         font-family: 'Inter';
         font-style: normal;
@@ -1326,11 +1331,11 @@ iframe{
         flex-direction: column;
         justify-content: space-between;
         height: 100%; 
+        max-width: min-content;
     }
-
-    .mainNavSection{
-        margin-top: 96px;
-    }
+.mainNavSection{
+    margin-bottom:48px;
+}
 
     .mainNavSection li{
         text-align: left;
@@ -1360,8 +1365,7 @@ iframe{
 }
   
 .coneSvg{
-    grid-column: 3/span 2; 
-    
+    grid-column: 3/span 2;
 }
 
 #workSection {
@@ -1543,6 +1547,8 @@ margin-top: 42px;
     padding:0 24px;
   
 }
+
+
 .articleContain {
     padding:0 24px;
     max-width: 600px;
@@ -1558,7 +1564,8 @@ margin-top: 42px;
 }
 .articleContain img {
     max-height: 600px;
-    width: 100%;
+    max-width: 700px !important;
+    align-self: center;
     object-fit: fill;
 }
 .articleContain ol li,.articleContain ul li{
