--- a/stylesheets.css
+++ b/stylesheets.css
@@ -996,6 +996,8 @@ aside{
 
     .hero {
         padding: 0 24px;
+        align-items: flex-start;
+        height: 60vh; 
     }
 
     .mainTitleCover h3 {
@@ -1007,8 +1009,7 @@ aside{
     }
 
     .subTitleCover {
-        font-size: 16px;
-        max-width: 95%; 
+        font-size: 16px; 
         padding-top: 16px;
         font-family: 'Inter';
         font-style: normal;
@@ -1020,13 +1021,14 @@ aside{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100%;
+        height: 90%;
+        max-width: min-content;
         /* padding-bottom:32px; */
     }
     
     .mainNavSection {
     /* margin-top: 48px; */
-    margin-bottom:116px;
+    margin-bottom:64px;
     }
 
     .mainNavSection li{
@@ -1329,11 +1331,11 @@ iframe{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100%; 
+        height: 90%; 
         max-width: min-content;
     }
 .mainNavSection{
-    margin-bottom:48px;
+    margin-bottom:64px;
 }
 
     .mainNavSection li{
